깃허브 저장

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+	<link rel="shortcut icon" href="img/lunch.ico">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -15,7 +16,6 @@
     	<input id="date" style="border-radius: 3vw;width: 20vw; height: 4vw; font-size: 2vw; font-family: 'Jua', sans-serif;" type="date">
     	<button onclick="menu()" style="color: #fff;font-size: 2vw;font-family: 'Jua', sans-serif;width: 20vw; height: 7.5vw; background-color: #0000CF; border: 0px; border-radius: 100vw;">급식 보기</button>
     	<div style="color: #fff;width: 90vw; border-radius: 5vw; background-color: rgba(0,0,0,0.3);height: 30vw;"><h1 class="menu" id="menu" style="font-family: 'Jua', sans-serif;"><span style='font-size: 5vw;'>급식 메뉴<br></span></h1></div>
-		
 	</center>
 </body>
 <script>
