--- a/index.html
+++ b/index.html
@@ -1,79 +1,169 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
+
 <head>
-	<link rel="shortcut icon" href="img/lunch.ico">
+    <!-- 기본 설정 -->
+    <link rel="shortcut icon" href="img/lunch.ico">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>거제중학교 급식 메뉴</title>
-	<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Jua&display=swap" rel="stylesheet">
+    <!-- CSS -->
+    <link href="./CSS/style.css" rel="stylesheet">
+    <link href="./CSS/footer.css" rel="stylesheet">
+    <!-- JS -->
+    <link href="./JS/ani.js" rel="type/javascript">
+    <link href="./JS/lunch.js" rel="type/javascript">
+    <!-- bootstrap -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <!-- JQuery -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
 </head>
-<body style="font-family: 'Jua', sans-serif; background-image: url('https://cdn.pixabay.com/photo/2014/12/11/02/55/cereals-563796_960_720.jpg'); background-repeat: no-repeat; background-size: cover;">
-	<button style="background-image: url('img/fullscreen.png');background-size: cover; border: 0px; width: 3vw; height: 3vw;" onclick="document.documentElement.requestFullscreen()"></button>
-	<center>
-    	<input id="date" style="border-radius: 3vw;width: 20vw; height: 4vw; font-size: 2vw; font-family: 'Jua', sans-serif;" type="date">
-    	<button onclick="menu()" style="color: #fff;font-size: 2vw;font-family: 'Jua', sans-serif;width: 20vw; height: 7.5vw; background-color: #0000CF; border: 0px; border-radius: 100vw;">급식 보기</button>
-    	<div style="color: #fff;width: 90vw; border-radius: 5vw; background-color: rgba(0,0,0,0.3);height: 30vw;"><h1 class="menu" id="menu" style="font-family: 'Jua', sans-serif;"><span style='font-size: 5vw;'>급식 메뉴<br></span></h1></div>
-	</center>
+
+<body>
+
+    <!-- navbar -->
+
+    <nav class="navbar navbar-expand-lg bg-body-tertiary" style="position:fixed;width: 100vw; z-index: 10;">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#">급식 메뉴</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarText">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                        <a class="nav-link" href="#TOP">TOP</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#content">내용</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+
+    <!-- bgimg -->
+
+    <div class="bgimg">
+        <div class="darkness">
+            <center>
+                <h1 class="splash-text subtitle">
+                    <span style="background-image: linear-gradient(to right, #FFCCAA, #FFEEDD);
+					background-clip: text;
+					-webkit-background-clip: text;
+					color: transparent;"><b>오늘의 급식</b></span> 메뉴,
+                </h1>
+                <h1 class="title">
+                    여기에서 확인하세요.
+                </h1>
+            </center>
+        </div>
+    </div>
+
+    <!-- content -->
+
+    <a name="content"></a>
+    <div class="content">
+        <center style="padding-top: 20px">
+            <table>
+                <tr>
+                    <td>
+                        <input id="date" type="date">
+                    </td>
+                    <td>
+                        <button class="custom-btn btn-3" id="button" style="margin-left: 2em;" onclick="menu()"><span>검색하기</span></button>
+                    </td>
+                </tr>
+            </table>
+            <div class="menu-content">
+                <h1 class="menu" id="menu"><span style='font-size: 2em;'>급식
+                        메뉴<br></span></h1>
+            </div>
+            <div class="pos-content">
+                <h1 class="menu" id="pos"><span style='font-size: 2em;'>
+                        원산지<br></span></h1>
+            </div>
+        </center>
+    </div>
+
+    <!-- footer -->
+
+    <footer class="footer">
+        <center>
+            <div class="footer-div">
+                <p class="footer-center">© 2024 All rights reserved. · 관리자 지나가던참새</p>
+                <a target="_blank" style="text-decoration: none; color: #717171;" href="https://hoo091221.github.io/nomo">NOMO</a> |
+                <a target="_blank" style="text-decoration: none; color: #C1C1C1;" href="https://hoo091221.github.io/lunch">거제중학교 급식</a> |
+                <a target="_blank" style="text-decoration: none; color: #717171;" href="https://hoo091221.github.io/binary">이진수 계산기</a> |
+                <a target="_blank" style="text-decoration: none; color: #717171;" href="https://hoo091221.github.io/light">빛의 삼원색</a> |
+                <a target="_blank" style="text-decoration: none; color: #717171;" href="https://hoo091221.github.io/pi">원주율</a>
+                <center>
+                    <hr class="footer-hr">
+                </center>
+                <p class="footer-left">
+                    <br> 이메일 hoo091221@gmail.com
+                    <br>이 사이트는 여러분의 개인정보를 수집하지 않습니다.
+                </p>
+            </div>
+        </center>
+    </footer>
 </body>
+
 <script>
+    function readTextFile(file) {
+        var rawFile = new XMLHttpRequest();
+        rawFile.open("GET", file, false);
+        rawFile.onreadystatechange = function() {
+            if (rawFile.readyState === 4) {
+                if (rawFile.status === 200 || rawFile.status == 0) {
+                    var allText = rawFile.responseText;
+                    alert(allText);
+                }
+            }
+        }
+        rawFile.send(null);
+    }
+
+    readTextFile("./school.csv");
+
     function menu() {
         const day = document.getElementById('date').value.replace(/[-]/g, '');
-	const url =
-		'https://open.neis.go.kr/hub/mealServiceDietInfo?ATPT_OFCDC_SC_CODE=' +
-		'S10' + // 학교 코드
-		'&SD_SCHUL_CODE=' +
-		'9111056' + // 지역 코드
-		'&MLSV_YMD=' +
-		day +
-		'&key=0329ec2eb15f4888b665ab2b92887d4a'; // 키값
-	const request = new XMLHttpRequest();
-	request.open('GET', url, true);
-	request.onload = function () {
-		var menu =
-				"<span style='font-size: 5vw;'>급식 메뉴<br></span>" +
-				request.responseText
-					.slice(0, -731)
-					.slice(649)
-					.replace(/\./g, '')
-					.replace(/[0-9]/g, '');
+        const url =
+            'https://open.neis.go.kr/hub/mealServiceDietInfo?ATPT_OFCDC_SC_CODE=' +
+            'S10' + // 학교 코드
+            '&SD_SCHUL_CODE=' +
+            '9111056' + // 교육청 코드
+            '&MLSV_YMD=' +
+            day +
+            '&type=' +
+            'JSON' +
+            '&key=0329ec2eb15f4888b665ab2b92887d4a'; // 키값
+        console.log(url);
+        const request = new XMLHttpRequest();
+        request.open('GET', url, true);
+        request.onload = function() {
+            var menu =
+                "<span style='font-size: 2em;'>급식 메뉴<br></span><span style='font-size: 0.75em;'>" +
+                JSON.stringify(JSON.parse(request.responseText)["mealServiceDietInfo"][1]["row"][0]["DDISH_NM"]).slice(1, -1) + '</span>';
 
-		document.getElementById('menu').innerHTML = menu;
-	};
-	request.send();
-}
-</script>
-<script>
-    function findmenu() {
-		let date = new Date();
-		var year = date.getFullYear();
-		var month = date.getMonth() + 1;
-		var day = date.getDay();
-		
-	const url =
-		'https://open.neis.go.kr/hub/mealServiceDietInfo?ATPT_OFCDC_SC_CODE=' +
-		'S10' + // 학교 코드
-		'&SD_SCHUL_CODE=' +
-		'9111056' + // 지역 코드
-		'&MLSV_YMD=' +
-		day +
-		'&key=0329ec2eb15f4888b665ab2b92887d4a'; // 키값
-	const request = new XMLHttpRequest();
-	request.open('GET', url, true);
-	request.onload = function () {
-		var menu =
-				"<span style='font-size: 5vw;'>급식 메뉴<br></span>" +
-				request.responseText
-					.slice(0, -731)
-					.slice(649)
-					.replace(/\./g, '')
-					.replace(/[0-9]/g, '');
+            var pos = '<span style="font-size: 2em;">원산지<br></span><span style="font-size: 0.7em;">' +
+                JSON.stringify(JSON.parse(request.responseText)["mealServiceDietInfo"][1]["row"][0]["ORPLC_INFO"]).slice(1, -1).replace(/<(\/br|br)([^>]*)>/gi, " | ");
+            '</span>';
 
-		document.getElementById('menu').innerHTML = menu;
-	};
-	request.send();
-}
+            document.getElementById('menu').innerHTML = menu;
+            document.getElementById('pos').innerHTML = pos;
+        };
+        request.send();
+    }
 </script>
+
+<!-- Copyright (c) 2024 by Yuhomyan (https://codepen.io/yuhomyan/pen/OJMejWJ)
+
+Permission is hereby granted, free of charge, to any person obtaining a copy of this software and associated documentation files (the "Software"), to deal in the Software without restriction, including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Software, and to permit persons to whom the Software is furnished to do so, subject to the following conditions:
+
+The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.
+
+THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE. -->
+
 </html>
