--- a/index.html
+++ b/index.html
@@ -7,13 +7,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>거제중학교 급식 메뉴</title>
+    <title>급식 메뉴</title>
     <!-- CSS -->
     <link href="./CSS/style.css" rel="stylesheet">
     <link href="./CSS/footer.css" rel="stylesheet">
-    <!-- JS -->
-    <link href="./JS/ani.js" rel="type/javascript">
-    <link href="./JS/lunch.js" rel="type/javascript">
     <!-- bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <!-- JQuery -->
@@ -54,7 +51,7 @@
 					-webkit-background-clip: text;
 					color: transparent;"><b>오늘의 급식</b></span> 메뉴,
                 </h1>
-                <h1 class="title">
+                <h1 class="splash-p title">
                     여기에서 확인하세요.
                 </h1>
             </center>
@@ -64,7 +61,7 @@
     <!-- content -->
 
     <a name="content"></a>
-    <div class="content">
+    <div class="content content-div">
         <center style="padding-top: 20px">
             <table>
                 <tr>
@@ -76,13 +73,17 @@
                     </td>
                 </tr>
             </table>
-            <div class="menu-content">
-                <h1 class="menu" id="menu"><span style='font-size: 2em;'>급식
-                        메뉴<br></span></h1>
-            </div>
-            <div class="pos-content">
-                <h1 class="menu" id="pos"><span style='font-size: 2em;'>
-                        원산지<br></span></h1>
+        </center>
+        <center>
+            <div class="c-div">
+                <div class="c menu-content">
+                    <h1 class="menu" id="menu"><span style='font-size: 2em;'>급식
+                            메뉴<br></span></h1>
+                </div>
+                <div class="c pos-content">
+                    <h1 class="menu" id="pos"><span style='font-size: 2em;'>
+                            원산지<br></span></h1>
+                </div>
             </div>
         </center>
     </div>
@@ -92,7 +93,7 @@
     <footer class="footer">
         <center>
             <div class="footer-div">
-                <p class="footer-center">© 2024 All rights reserved. · 관리자 지나가던참새</p>
+                <p class="footer-center">© 2024 All rights reserved.</p>
                 <a target="_blank" style="text-decoration: none; color: #717171;" href="https://hoo091221.github.io/nomo">NOMO</a> |
                 <a target="_blank" style="text-decoration: none; color: #C1C1C1;" href="https://hoo091221.github.io/lunch">거제중학교 급식</a> |
                 <a target="_blank" style="text-decoration: none; color: #717171;" href="https://hoo091221.github.io/binary">이진수 계산기</a> |
@@ -102,13 +103,17 @@
                     <hr class="footer-hr">
                 </center>
                 <p class="footer-left">
-                    <br> 이메일 hoo091221@gmail.com
+                    이메일 hoo091221@gmail.com
+                    <br> <a href="https://www.instagram.com/hoo_091221" style="color: #717171; text-decoration: none;">인스타그램 @hoo_091221</a>
                     <br>이 사이트는 여러분의 개인정보를 수집하지 않습니다.
+                    <br>image copyright <a href="https://www.pixabay.com" style="color: #717171; text-decoration: none;">www.pixabay.com</a>
                 </p>
             </div>
         </center>
     </footer>
 </body>
+
+<!-- lunch.js -->
 
 <script>
     function readTextFile(file) {
@@ -125,7 +130,14 @@
         rawFile.send(null);
     }
 
-    readTextFile("./school.csv");
+    readTextFile("./school.csv").on('data', (row) => {
+        // CSV 데이터 처리를 위한 코드 작성
+        // 'b' 열 값이 'apple'을 포함하는 행 찾기
+        const filteredRows = results.filter(row => row['b'].includes('apple'));
+        // 'b' 열 값이 'apple'을 포함하는 행의 'c' 열 데이터 가져오기
+        const columnCData = filteredRows.map(row => row['c']);
+        alert(); // 클라이언트에 데이터 전송
+    })
 
     function menu() {
         const day = document.getElementById('date').value.replace(/[-]/g, '');
@@ -139,23 +151,55 @@
             '&type=' +
             'JSON' +
             '&key=0329ec2eb15f4888b665ab2b92887d4a'; // 키값
-        console.log(url);
+
         const request = new XMLHttpRequest();
         request.open('GET', url, true);
         request.onload = function() {
-            var menu =
-                "<span style='font-size: 2em;'>급식 메뉴<br></span><span style='font-size: 0.75em;'>" +
-                JSON.stringify(JSON.parse(request.responseText)["mealServiceDietInfo"][1]["row"][0]["DDISH_NM"]).slice(1, -1) + '</span>';
+            try {
+                var menu =
+                    "<span style='font-size: 2em;'>급식 메뉴<br></span><span style='font-size: 0.75em;'>" +
+                    JSON.stringify(JSON.parse(request.responseText)["mealServiceDietInfo"][1]["row"][0]["DDISH_NM"]).slice(1, -1) + '</span>';
 
-            var pos = '<span style="font-size: 2em;">원산지<br></span><span style="font-size: 0.7em;">' +
-                JSON.stringify(JSON.parse(request.responseText)["mealServiceDietInfo"][1]["row"][0]["ORPLC_INFO"]).slice(1, -1).replace(/<(\/br|br)([^>]*)>/gi, " | ");
-            '</span>';
+                var pos = '<span style="font-size: 2em;">원산지<br></span><span style="font-size: 0.7em;">' +
+                    JSON.stringify(JSON.parse(request.responseText)["mealServiceDietInfo"][1]["row"][0]["ORPLC_INFO"]).slice(1, -1).replace(/<(\/br|br)([^>]*)>/gi, " | ");
+                '</span>';
+
+            } catch (error) {
+                menu = "<span style='font-size: 2em;'>급식 메뉴<br></span><span style='font-size: 0.75em;'>이날의 급식은 제공되지 않네요!</span>";
+                pos = '<span style="font-size: 2em;">원산지<br></span>'
+            }
 
             document.getElementById('menu').innerHTML = menu;
             document.getElementById('pos').innerHTML = pos;
         };
         request.send();
     }
+</script>
+
+<!-- ani.js -->
+
+<script>
+    document.addEventListener("DOMContentLoaded", () => {
+        const splashText = document.querySelector(".splash-text");
+        const splashP = document.querySelector(".splash-p");
+        const splashBtn = document.querySelector(".splash-btn");
+
+        setTimeout(() => {
+            splashText.style.opacity = "1";
+            splashText.style.transform = "translateY(0)";
+
+            setTimeout(() => {
+                splashP.style.opacity = "1";
+                splashP.style.transform = "translateY(0)";
+
+
+                setTimeout(() => {
+                    splashBtn.style.opacity = "1";
+                    splashBtn.style.transform = "translateY(0)";
+                }, 500);
+            }, 500);
+        }, 500);
+    });
 </script>
 
 <!-- Copyright (c) 2024 by Yuhomyan (https://codepen.io/yuhomyan/pen/OJMejWJ)
